# sam-multi-account-pipeline

./: .gitignore  Dockerfile  Makefile  README.md  pipe.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: deploy-example-nodejs.yml  deploy-example-python.yml  publish.yml
example/nodejs/: .env.dev  samconfig.toml  template.yaml
example/nodejs/.github/workflows/: deploy.yml
example/nodejs/src/: handler.js
example/python/: template.yaml
example/python/.github/workflows/: deploy.yml
example/python/src/: handler.py
sam_pipeline/: __init__.py  __main__.py  accounts.py  aws_utils.py  exceptions.py  pipe.py  schema.py  utils.py
sam_pipeline/scripts/: sam.sh  setup-environment.sh
tests/: __init__.py  conftest.py  test_pipeline.py
